[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ophyd-async"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "Asynchronous Bluesky hardware abstraction code, compatible with control systems like EPICS and Tango"
dependencies = [
    "numpy",
    "bluesky>=1.13.1rc2",
    "event-model>=1.23",
    "pyyaml",
    "colorlog",
    "pydantic>=2.0",
    "pydantic-numpy",
    "stamina>=23.1.0",
    "scanspec>=0.8",
    "velocity-profile",
]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
sim = ["h5py"]
ca = ["aioca>=2.0a4"]
pva = ["p4p>=4.2.0"]
tango = ["pytango>=10.0.2"]
demo = ["ipython", "matplotlib", "pyqt6"]

[dependency-groups]
dev = [
    "ophyd_async[sim]",
    "ophyd_async[ca]",
    "ophyd_async[pva]",
    "ophyd_async[tango]",
    "ophyd_async[demo]",
    "inflection",
    "import-linter",
    "myst-parser",
    "numpydoc",
    "ophyd>=1.10.7",
    "pickleshare",
    "pipdeptree",
    "pre-commit",
    "pydata-sphinx-theme>=0.12",
    "pyepics>=3.4.2",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-faulthandler",
    "pytest-forked",
    "pytest-insubprocess",
    "pytest-rerunfailures",
    "pytest-timeout",
    "ruff",
    "scanspec>=1.0a1",
    "sphinx-autobuild",
    "sphinx-autodoc2",
    "sphinxcontrib-mermaid",
    "sphinx-copybutton",
    "sphinx-design",
    "tox-uv",
    "types-mock",
    "types-pyyaml",
]

[project.urls]
GitHub = "https://github.com/bluesky/ophyd-async"

[[project.authors]] # Further authors may be added by duplicating this section
email = "tom.cobb@diamond.ac.uk"
name = "Tom Cobb"

[tool.setuptools_scm]
version_file = "src/ophyd_async/_version.py"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = false  # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --strict-markers --doctest-modules
    --doctest-glob="*.rst" --doctest-glob="*.md"
    --ignore=docs/examples --ignore=src/ophyd_async/epics/signal.py
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = "error"
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests/unit_tests"
log_format = "%(asctime)s,%(msecs)03d %(levelname)s (%(threadName)s) %(message)s"
log_date_format = "%H:%M:%S"

markers = [
    "motorsim: require the motorsim IOC to be running",
    "adsim: require the ADsim IOC to be running",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 1

[tool.coverage.run]
patch = ["subprocess"]
data_file = "/tmp/ophyd_async.coverage"
# branch = true

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

[tool.tox]
skipsdist = true
# envs to runs automatically with tox -p
env_list = ["pre-commit", "type-checking", "tests", "docs"]

[tool.tox.env_run_base]
# Pass all environment variables to the test environments
passenv = ["*"]

[tool.tox.env.pre-commit]
description = "Run pre-commit on all files"
commands = [
    [
        "pre-commit",
        "run",
        "--all-files",
        "--show-diff-on-failure",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.type-checking]
description = "Run pyright"
commands = [
    [
        "pyright",
        "--pythonpath",
        ".venv/bin/python",
        "src",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.tests]
description = "Run tests with coverage"
commands = [
    [
        "pytest",
        "--cov=ophyd_async",
        "--cov-report",
        "term",
        "--cov-report",
        "xml:cov.xml",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.docs]
description = "Run docs build with clean environment"
commands = [
    [
        "sphinx-build",
        "--fresh-env",
        "--show-traceback",
        "--fail-on-warning",
        "--keep-going",
        "docs",
        "build/html",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.docs-autobuild]
description = "Run docs with autobuild on change"
commands = [
    [
        "sphinx-autobuild",
        "--show-traceback",
        "--watch",
        "README.md",
        "docs",
        "build/html",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.ruff]
line-length = 88
lint.select = [
    "B",       # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",      # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",       # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",       # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "N",       # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "W",       # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",       # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP",      # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "SLF",     # self - https://docs.astral.sh/ruff/settings/#lintflake8-self
    "PLC2701", # private import - https://docs.astral.sh/ruff/rules/import-private-name/
    "LOG015",  # root logger call - https://docs.astral.sh/ruff/rules/root-logger-call/
    "S101",    # assert - https://docs.astral.sh/ruff/rules/assert/
    "D",       # docstring - https://docs.astral.sh/ruff/rules/#pydocstyle-d
]
lint.ignore = [
    "B901", # Return in a generator is needed for plans
    "D107", # We squash __init__ docstrings into the class docstring
    "D104", # TODO: remove this after https://github.com/bluesky/ophyd-async/issues/754
]
lint.preview = true # so that preview mode PLC2701 is enabled

[tool.ruff.lint.pydocstyle]
convention = "google" # not really, but close enough...

[tool.ruff.lint.per-file-ignores]
# By default, private member access is allowed in tests
# See https://github.com/DiamondLightSource/python-copier-template/issues/154
# Remove this line to forbid private member access in tests
"tests/**/*" = ["SLF001", "S101", "D"]
"src/ophyd_async/testing/**/*" = ["SLF001", "S101"]
"system_tests/**/*" = ["SLF001", "S101", "D"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
# We often shorten "Annotated" to "A" for brevity
"typing.Annotated" = "A"

[tool.ruff.lint.pep8-naming]
# The fixture RE is commonly used in tests
extend-ignore-names = ["RE"]

[tool.importlinter]
root_package = "ophyd_async"

[[tool.importlinter.contracts]]
name = "All runtime modules are in layers"
type = "layers"
containers = ["ophyd_async"]
layers = ["plan_stubs", "fastcs", "epics | tango | sim", "core"]
exhaustive = true
exhaustive_ignores = ["testing", "_version", "__main__", "_docs_parser"]

[[tool.importlinter.contracts]]
name = "Testing and sim modules are not used at runtime"
type = "forbidden"
forbidden_modules = ["ophyd_async.testing", "ophyd_async.sim"]
source_modules = [
    "ophyd_async.plan_stubs",
    "ophyd_async.fastcs.*",
    "ophyd_async.epics.*",
    "ophyd_async.tango.*",
]
ignore_imports = ["ophyd_async.*.testing.* -> ophyd_async.testing"]

[[tool.importlinter.contracts]]
name = "ophyd_async.core private modules are not to be used outside ophyd_async.core"
type = "forbidden"
forbidden_modules = ["ophyd_async.core.*"]
source_modules = [
    "ophyd_async.testing",
    "ophyd_async.plan_stubs",
    "ophyd_async.fastcs.*",
    "ophyd_async.epics.*",
    "ophyd_async.tango.*",
]
allow_indirect_imports = true
